tests/res/has/error_type_shape_binder.say
type T { pub f; init() { this.f = 1; } }
say x = T();
x has T { f: y }; // error: `has` does not bind; `y` would bind it. Use a literal or `_` to test the value, or `match` to bind
